--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,7 @@
 * {
-    margin: 0;
     padding: 0;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
+    margin: 0;
+    box-sizing: border-box;
   }
   
   html {
@@ -17,28 +16,16 @@
   
   .container {
     height: 100vh;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    justify-content: center;
+    align-items: center;
   }
   
   .card {
     background-color: #1b1938;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: stretch;
-        -ms-flex-align: stretch;
-            align-items: stretch;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    align-items: stretch;
+    justify-content: center;
     max-width: 78%;
     max-width: 1140px;
     border-radius: 1.0rem;
@@ -49,20 +36,14 @@
     height: auto;
     padding: 6%;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
   }
   
   .card-text-part .block {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    flex-direction: column;
+    justify-content: space-between;
     height: 100%;
     width: 85%;
   }
@@ -72,7 +53,6 @@
     font-size: 3.4rem;
     margin-bottom: 2.8rem;
     line-height: 4.2rem;
-    letter-spacing: 0.6px;
   }
   
   .card-text-part span {
@@ -87,58 +67,36 @@
   }
   
   .stats {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    align-items: center;
+    justify-content: space-between;
     margin-top: 4.0rem;
   }
   
-  .stat-block {
-    display: -webkit-box;
-    display: -ms-flexbox;
+  .stats-content {
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
+    flex-direction: column;
+    justify-content: flex-start;
   }
   
-  .stat-num {
+  .num-stats {
     color: white;
     font-weight: bold;
     font-size: 2.2rem;
   }
   
-  .stat-title {
+  .title-stats {
     color: rgba(255, 255, 255, 0.6);
-    text-transform: uppercase;
     letter-spacing: 0.1rem;
     font-size: 1.2rem;
     font-family: 'Lexend Deca', sans-serif;
     margin-top: 0.8rem;
   }
   
-  .card-img-part {
+  .img-card {
     position: relative;
     background-color: #aa5cdb;
     border-radius: 0 1rem 1rem 0;
-    /*border: 2px solid yellow;
-      width: 100%;
-      background-image: url('../images/image-header-desktop.jpg');
-      background-size: contain;
-      background-repeat: no-repeat;
-      background-color: hsla(277, 64%, 61%, 1);
-      background-blend-mode: multiply;
-      filter: contrast(0.9);*/
   }
   
   img {
@@ -162,7 +120,7 @@
   }
   
   @media screen and (max-width: 1050px) {
-    .stat-title {
+    .title-stats {
       font-size: 1.1rem;
     }
     .card-text-part .block {
@@ -185,45 +143,26 @@
     .container {
       height: 100%;
       min-height: 100vh;
-      display: -webkit-box;
-      display: -ms-flexbox;
       display: flex;
-      -webkit-box-align: center;
-          -ms-flex-align: center;
               align-items: center;
-      -webkit-box-pack: center;
-          -ms-flex-pack: center;
               justify-content: center;
     }
     .card {
-      display: -webkit-box;
-      display: -ms-flexbox;
       display: flex;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-          -ms-flex-direction: column;
-              flex-direction: column;
+      flex-direction: column;
       max-width: 78%;
       margin: 3% 0;
     }
     .stats {
-      -ms-flex-wrap: wrap;
-          flex-wrap: wrap;
+    flex-wrap: wrap;
     }
-    .stat-block {
-      display: -webkit-box;
-      display: -ms-flexbox;
+    .stats-content {
       display: flex;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-          -ms-flex-direction: column;
-              flex-direction: column;
+      flex-direction: column;
       margin: 1.6rem;
     }
     .card-text-part {
-      -webkit-box-ordinal-group: 3;
-          -ms-flex-order: 2;
-              order: 2;
+      order: 2;
       padding: 10%;
     }
     .card-text-part .block {
@@ -241,14 +180,12 @@
     .stats {
       margin-top: 2.8rem;
     }
-    .stat-title {
+    .title-stats {
       font-size: 1.2rem;
     }
     .card-img-part {
       border-radius: 1rem 1rem 0 0;
-      -webkit-box-ordinal-group: 2;
-          -ms-flex-order: 1;
-              order: 1;
+      order: 1;
     }
     img {
       border-radius: 1rem 1rem 0 0;
@@ -268,52 +205,27 @@
   @media screen and (max-width: 375px) {
     .container {
       height: 100vh;
-      display: -webkit-box;
-      display: -ms-flexbox;
       display: flex;
-      -webkit-box-align: center;
-          -ms-flex-align: center;
-              align-items: center;
-      -webkit-box-pack: center;
-          -ms-flex-pack: center;
-              justify-content: center;
+      align-items: center;
+      justify-content: center;
     }
     .card {
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-          -ms-flex-direction: column;
-              flex-direction: column;
       max-width: 88%;
+      display: flex;
+      flex-direction: column;
     }
     .stats {
-      display: -webkit-box;
-      display: -ms-flexbox;
       display: flex;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-          -ms-flex-direction: column;
-              flex-direction: column;
+      flex-direction: column;
     }
-    .stat-block {
-      display: -webkit-box;
-      display: -ms-flexbox;
+    .stats-content {
       display: flex;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-          -ms-flex-direction: column;
-              flex-direction: column;
-      -webkit-box-align: center;
-          -ms-flex-align: center;
-              align-items: center;
+      flex-direction: column;
+      align-items: center;
       margin: 1.6rem;
     }
     .card-text-part {
-      -webkit-box-ordinal-group: 3;
-          -ms-flex-order: 2;
-              order: 2;
+      order: 2;
       padding: 10%;
     }
     .card-text-part .block {
@@ -332,14 +244,12 @@
     .stats {
       margin-top: 2.8rem;
     }
-    .stat-title {
+    .title-stats {
       font-size: 1.2rem;
     }
     .card-img-part {
       border-radius: 1rem 1rem 0 0;
-      -webkit-box-ordinal-group: 2;
-          -ms-flex-order: 1;
-              order: 1;
+      order: 1;
     }
     img {
       border-radius: 1rem 1rem 0 0;
